tests/vertical-slice/reject/lambda_close_extra_arg.hew
// Reject: LambdaPid::close takes no arguments. Extra arguments were previously
// type-checked for recovery and then silently dropped by MIR lowering, so this
// must fail at check time instead.
fn main() {
    let printer = actor |x: i64| {
        println(x);
    };
    printer.close(12345);
}
